# ESP32

./: .gitignore  README.md  pyproject.toml  requirements.txt  testSubPage.py
.github/workflows/: build.yml  release.yml
cwc/: base.py  secure_core.py  secure_editor.py  sm3_cipher.py  sm4_cipher.py
src/: DataHandle.py  DataMasking.py  HomePage.py  SecureEditor.py  SensitiveData.py  mainWindows.py  nuitka-crash-report.xml  oldmain.py
src/algorithms/DataEncode/: BlindWaterMarkDec.py  BlindWaterMarkEnc.py  CloackedPixelDec.py  CloackedPixelEnc.py  GilbertDec.py  GilbertEnc.py  Novel_to_ImageDec.py  Novel_to_ImageEnc.py  PeanoDec.py  PeanoEnc.py  SimpleScaleDownDec.py  SimpleScaleDownEnc.py
src/algorithms/SecureEditor/: secure_core.py  sm3_cipher.py  sm4_cipher.py  utils.py
src/algorithms/SensitiveData/: Sensitive_Data_Recognition.py  data_desensitization.py  main.py
src/mod/: Fluent3Icon.py
src/mod/font/: fontNameMap.json
src/pages/: CLImode.py  CLImodeInput.py
src/template/: CLI_Data_Desensitization_Tab.py  CLI_Sensitive_Data_Recognition_Tab.py  CLImode.py  CLImodeInput.py  __init__.py
style/: QLineEdit.qss
widget/: secure_editor_tab.py
