[project]
name = "esp32"
version = "0.1.0"
description = "Encryption & Security Platform 32"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pycryptodome>=3.23.0",
    "colorthief==0.2.1",
    "darkdetect==0.8.0",
    "pyqt-fluent-widgets==1.8.1",
    "pyqt5==5.15.11",
    "pyqt5-frameless-window==0.7.3",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "pywin32==310",
    "scipy==1.15.3",
    "qrcode>=8.2",
    "tqdm>=4.67.1",
]
